# L2dLLM

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  test_client.py
personas/: assistant.md  cat.md
src/l2dllm/: __init__.py  __main__.py  cli.py  config.py  tts.py
src/l2dllm/agents/: __init__.py  graph.py  nodes.py  state.py  tts_node.py
src/l2dllm/llm/: __init__.py  factory.py
src/l2dllm/personas/: __init__.py  loader.py  persona.py
src/l2dllm/server/: __init__.py  app.py  converters.py  schemas.py
src/l2dllm/skills/: __init__.py  as_tool.py  loader.py  skill.py
src/l2dllm/tools/: __init__.py  base.py  builtin.py  registry.py  shell.py
src/l2dllm/tui/: __init__.py  app.py
tests/: conftest.py  test_chat_tts.py  test_client.py  test_tts.py
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.vue  types.ts
web/src/api/: openai.ts
web/src/components/: Composer.vue  MessageList.vue  ModelPicker.vue
