[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l2dllm"
version = "0.1.0"
description = "A minimal LLM chat client with TUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "meguru" },
]

dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.50",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
l2dllm = "l2dllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/l2dllm"]

[tool.ruff]
line-length = 100
target-version = "py311"
