[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l2dllm"
version = "0.1.0"
description = "OpenAI-compatible LLM backend with persona library and tool calling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "meguru" },
]

dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.25.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.50",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "soundfile>=0.12.0",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
l2dllm = "l2dllm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/l2dllm"]

[tool.ruff]
line-length = 100
target-version = "py311"
